--- a/assets/styles/css/global.css
+++ b/assets/styles/css/global.css
@@ -1,30 +1,103 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  letter-spacing: 0.2rem;
+  font-family: sans-serif;
+  border: none;
+  text-decoration: none;
+  list-style-type: none;
+}
+
+html {
+  font-size: 62.4%;
+}
+
 input {
   width: 100%;
   height: 100%;
 }
 
 #appContainer {
+  padding: 4rem;
   background: rgba(17, 17, 17, 0.0666666667);
   height: 100vh;
   width: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
 }
 #appContainer .container {
-  height: 100%;
-  width: 100%;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 #appContainer .container form {
-  width: 400px;
-  border: 1px solid #111;
-  padding: 2rem 0.9rem;
+  background: #fff;
+  border-radius: 0.7rem;
+  max-width: 460px;
+  width: 100%;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+}
+#appContainer .container form h1 {
+  font-size: 2.5rem;
+  text-shadow: 1px 1px 1px #111;
 }
 #appContainer .container form .inputGroup {
+  width: 100%;
+}
+#appContainer .container form .inputGroup.duble {
   display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#appContainer .container form .inputGroup label {
+  font-size: 1.3rem;
+  font-weight: 700;
 }
 #appContainer .container form .inputGroup input {
+  padding-left: 0.8rem;
+  border-radius: 0.3rem;
+  border: 0.1rem solid #aaa6a6;
+  margin: 0.5rem 0 0 0;
   height: 33px;
+  background: rgba(211, 208, 208, 0.1647058824);
+}
+#appContainer .container form .inputGroup button {
+  cursor: pointer;
+  color: #fff;
+  padding: 0.9rem 1.6rem;
+  font-weight: bold;
+  background: #5850ec;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
+}
+#appContainer .container form .inputGroup button:hover {
+  background: rgba(88, 80, 236, 0.7607843137);
+}
+#appContainer .container form a {
+  font-size: 1.3rem;
+}
+
+footer ul {
+  display: flex;
+  gap: 1rem;
+}
+footer ul li {
+  margin-right: 0.7rem;
+}
+footer ul li a {
+  font-size: 1.2rem;
+  text-decoration: underline;
 }
 
 /*# sourceMappingURL=global.css.map */
